# ckanext-transmute

./: 404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml  test.ini
.github/workflows/: test.yml
api/: index.html
changelog/: index.html
ckanext/transmute/: exception.py  interfaces.py  plugin.py  schema.py  transmutators.py  types.py  utils.py
ckanext/transmute/logic/: action.py
ckanext/transmute/logic/action/: __init__.py  get.py
ckanext/transmute/logic/auth/: __init__.py
ckanext/transmute/tests/: conftest.py  test_action.py  test_transmutators.py
ckanext/transmute/tests/logic/: test_action.py
configuration/: index.html
docs/: api.md  configuration.md  installation.md  interfaces.md  usage.md
docs/usage/: index.md  schema.md  transmutators.md  type.md
installation/: index.html
interfaces/: index.html
search/: search_index.json
usage/: index.html
usage/schema/: index.html
usage/transmutators/: index.html
usage/type/: index.html
