[metadata]
name = ckanext-transmute
version = 2.0.0a0
description = Converts a dataset based on a specific schema
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mutantsan/ckanext-transmute
author = Alexandr Cherniavskyi
author_email= mutantsan@gmail.com
license = AGPL
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
keywords =
    CKAN
    scheming
    schema

[options]
python_requires = >= 3.8
packages = find:
namespace_packages = ckanext
install_requires =
        ckanext-scheming
        typing-extensions
include_package_data = True

[options.entry_points]
ckan.plugins =
    transmute = ckanext.transmute.plugin:TransmutePlugin

babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/transmute/i18n/ckanext-transmute.pot
width = 80

[init_catalog]
domain = ckanext-transmute
input_file = ckanext/transmute/i18n/ckanext-transmute.pot
output_dir = ckanext/transmute/i18n

[update_catalog]
domain = ckanext-transmute
input_file = ckanext/transmute/i18n/ckanext-transmute.pot
output_dir = ckanext/transmute/i18n
previous = true

[compile_catalog]
domain = ckanext-transmute
directory = ckanext/transmute/i18n
statistics = true

[tool:pytest]
filterwarnings =
    ignore::sqlalchemy.exc.SADeprecationWarning
    ignore::sqlalchemy.exc.SAWarning
    ignore::DeprecationWarning

addopts = --ckan-ini test.ini
